--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
       </div>
       <br>
       <div class="footer">
-        <footer>Designed with love by J&R</footer>
+        <footer>Designed with love by J&R.</footer>
       </div>
     </div>
   </div>
